# reconx-elite

./: .dockerignore  .env  .env.example  .gitignore  .merge_branch_diffs.txt  .merge_diff_summary.json  .merge_report_rows.md  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  MANUAL_VERIFICATION_IMPLEMENTATION.md  README.md  create_env.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  run_backend_tests.py  setup_advanced.sh  setup_env.bat  setup_env.ps1  soc_analysis.py  validate_ai_integration.py  validate_docker_system.py  vercel.json
backend/: .env.example  Dockerfile  agent_browser.py  agentic_orchestrator.py  ai_router.py  alembic.ini  context_tree.py  database.py  demo_manual_verification.py  exploit_chainer.py  logic_simulator.py  main.py  manual_verification_processor.py  mass_scan.py  model_router.py  models.py  notifications.py  orchestrator_7phase.py  phase_1_acquisition_mapper.py  phase_1_cloud_hunter.py  phase_2_api_mapper.py  phase_2_cve_database.py  phase_3_dual_session_handler.py  phase_4_5_tactical_strikes.py  phase_6_poc_generator.py  phase_7_markdown_reporter.py  predictive_sandbox.py  pyproject.toml  recon_pipeline.py  refinement.py  requirements.txt  scope_manager.py  semantic_fuzzer.py  session_manifest.py  tactical_decision_engine.py  tactical_report_generator.py  tech_profiler.py  tool_runner.py  waf_analyzer.py  watchdog.py  (+1 more)
backup/: backup.sh
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  PROJECT_SUMMARY.md  RAILWAY_PRODUCTION.md  vercel-live-deployment.md
frontend/: .env  (+7 more)
(+231 files in other folders)
