[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | frontend
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = ["frontend", "node_modules"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "frontend",
    "node_modules",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["frontend", "node_modules", "tests"]

[tool.bandit]
exclude_dirs = ["tests", "frontend", "node_modules"]
skips = ["B101", "B601"]
